--- a/src/graphcpp/Makefile
+++ b/src/graphcpp/Makefile
@@ -1,7 +1,7 @@
 all: Graph.exe
 
-Graph.exe: test.o MapNode.o
-	g++ -std=c++14 test.o MapNode.o-o Graph.exe
+Graph.exe: test.o MapNode.o graph.o
+	g++ -std=c++14 test.o MapNode.o graph.o -o Graph.exe
 
 
 	
