--- a/src/graphcpp/Makefile
+++ b/src/graphcpp/Makefile
@@ -1,5 +1,4 @@
 all: Graph
 
 Graph: 
-	# g++  MapNode.cpp graph.cpp test.cpp -o graph.exe -g
-	g++  MapNode.cpp graph.cpp test.cpp -o graph.exe
+	g++  MapNode.cpp graph.cpp test.cpp -o Graph.exe -g
